[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/novem___.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://art/buttons/frame.png" type="Texture" id=2]
[ext_resource path="res://art/buttons/frame_pressed.png" type="Texture" id=3]
[ext_resource path="res://scripts/line_input.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 162.0
margin_top = -53.0
margin_right = -192.0
margin_bottom = 3.0
custom_constants/separation = 150
alignment = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Action" type="Label" parent="."]
self_modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_right = 376.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = SubResource( 1 )
text = "Up"
align = 1
valign = 1
uppercase = true

[node name="ChangeButton" type="TextureButton" parent="."]
margin_left = 526.0
margin_right = 670.0
margin_bottom = 56.0
size_flags_horizontal = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )

[node name="Key" type="Label" parent="ChangeButton"]
margin_left = 29.0
margin_top = 13.0
margin_right = 115.0
margin_bottom = 40.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0.141176, 0.0745098, 0.831373 )
align = 1
valign = 1
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="ChangeButton" to="." method="_on_ChangeButton_button_down"]
[connection signal="button_up" from="ChangeButton" to="." method="_on_ChangeButton_button_up"]
[connection signal="pressed" from="ChangeButton" to="." method="_on_ChangeButton_pressed"]
